llvm/dev/intcallchain3expr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intcallchain3expr.llvm:11:1: error: expected instruction opcode
}
^
